--- a/aula15/Aula15_Atividade_ModelosProbabilisticosContinuosNormal.ipynb
+++ b/aula15/Aula15_Atividade_ModelosProbabilisticosContinuosNormal.ipynb
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"ex7\"><div>\n",
+    "<div id=\"ex7\"></div>\n",
     "    \n",
     "### EXERCÍCIO 7\n",
     "\n",
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div id=\"ex8\"><div>\n",
+    "<div id=\"ex8\"></div>\n",
     "    \n",
     "### EXERCÍCIO 8\n",
     "\n",
