Corrigindo gabarito dos exercicios

--- a/aula19/Aula19_Exercicios_THparaMediaComVarianciaConhecida.ipynb
+++ b/aula19/Aula19_Exercicios_THparaMediaComVarianciaConhecida.ipynb
@@ -183,7 +183,7 @@
     "\n",
     "#### c)\n",
     "\n",
-    "$RC=\\{\\overline{x}_{obs} > 2.183\\}$\n",
+    "$RC=\\{\\overline{x}_{obs} > 2.164299912850546\\}$\n",
     "\n",
     "#### d)\n",
     "\n",
