--- a/aula21/Aula21_Atividade_THparaMediaComVarianciaDesconhecida.ipynb
+++ b/aula21/Aula21_Atividade_THparaMediaComVarianciaDesconhecida.ipynb
@@ -361,19 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Decisão Via Região Crítica: BICAUDAL\n",
-    "t_obs=(x_obs-μ0)/(s/np.sqrt(n))\n",
-    "\n",
-    "t_c=stats.t.ppf(1-𝛼/2, df=n-1)\n",
-    "\n",
-    "print(\"t_obs={}\".format(t_obs))\n",
-    "print(\"t_c={}\".format(t_c))\n",
-    "\n",
-    "print(\"\\nRegra geral: Rejeitamos a hipótese nula H0 se t_obs pertencer a Região Crítica (RC)!!\\n\")\n",
-    "\n",
-    "print(\"RC={{t_obs<{} ou t_obs>{}}}\\n\".format(-t_c, t_c))\n",
-    "\n",
-    "print(\"Conclusão: Como t_obs NÃO pertence a RC, então NÃO há evidências de que máquina esteja desregulada, com 95% de confiança!!\")\n"
+    "# ESCREVA SEU CÓDIGO AQUI"
    ]
   },
   {
@@ -389,19 +377,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Decisão Via Valor-p: BICAUDAL\n",
-    "t_obs=(x_obs-μ0)/(s/np.sqrt(n))\n",
-    "\n",
-    "print(\"𝛼={}\".format(𝛼))\n",
-    "\n",
-    "#valor-p via t_obs\n",
-    "valor_p=2*stats.t.cdf(t_obs, df = n-1) #já que média amostral x_obs é menor do que μ0\n",
-    "print(\"Valor-p={}\".format(valor_p))\n",
-    "\n",
-    "print(\"\\nRegra geral: Rejeitamos a hipótese nula H0 se valor-p < 𝛼!!\\n\")\n",
-    "\n",
-    "print(\"Conclusão: Como nos resultados acima vemos que valor-p > 𝛼, então NÃO há evidências de que máquina esteja desregulada, com 95% de confiança!!\")\n",
-    "\n"
+    "# ESCREVA SEU CÓDIGO AQUI"
    ]
   },
   {
@@ -592,36 +568,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Agora, com o $z_{\\gamma/2}$ encontrado acima, vamos encontrar $n$ tal que este valor seja menor que uma certa tolerância dada por parâmetros do problema. Suponha que gostaríamos de estimar uma amostra que em `prob` $\\%$ das vezes está a uma distância máxima $d$ da média amostral (essa distância $d$ deve ser definida por quem está conduzindo a análise, assim como o $gamma$). \n",
+    "Agora, com o $z_{\\gamma/2}$ encontrado acima, vamos encontrar $n$ tal que este valor seja menor que uma certa tolerância dada por parâmetros do problema. Suponha que gostaríamos de estimar uma amostra que em `prob` $\\%$ das vezes está a uma distância máxima $d$ da média amostral (essa distância $\\varepsilon$ deve ser definida por quem está conduzindo a análise, assim como o $\\gamma$). \n",
     "\n",
     "Precisamos então projetar uma curva normal estreita o suficiente. Para isso, o valor $d$ precisa corresponder ao $z_{\\gamma/2}$ encontrado acima.\n",
     "\n",
-    "Para este exemplo vamos utilizar o exemplo dos resistores. Vamos supor que $\\sigma=50\\Omega$. Qual o tamanho $n$ da amostra precisaríamos ter para que em $95\\%$ das vezes estivéssemos a uma distância de no máximo $d=20\\Omega$ da média populacional $\\mu$?"
+    "Para este exemplo vamos utilizar o exemplo dos resistores. Vamos supor que $\\sigma=50\\Omega$. Qual o tamanho $n$ da amostra precisaríamos ter para que em $95\\%$ das vezes estivéssemos a uma distância de no máximo $\\varepsilon=20\\Omega$ da média populacional $\\mu$?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "σ = 50\n",
-    "d = 20\n",
+    "𝜀 = 20\n",
     "\n",
     "#Função que utiliza o pywidget\n",
-    "@interact(n = (1, 80, 1), mu=(950, 1050, 2), d = (10, 40, 2))\n",
-    "def funcao_Xbar(n=1, mu=1000, d=15):\n",
+    "@interact(n = (1, 80, 1), mu=(950, 1050, 2), 𝜀 = (10, 40, 2))\n",
+    "def funcao_Xbar(n=1, mu=1000, 𝜀=15):\n",
     "    plt.xlim(mu-50, mu+50)\n",
     "    d_amostral = σ/sqrt(n)\n",
     "    x_amostral = np.linspace(mu - 4*d_amostral, mu+4*d_amostral, 100)\n",
     "    y_X = norm.pdf(x_amostral, loc=mu, scale=d_amostral)\n",
     "    plt.plot(x_amostral, y_X)\n",
-    "    plt.axvline(mu + d, color=\"red\")\n",
-    "    plt.axvline(mu - d, color=\"red\")\n",
+    "    plt.axvline(mu + 𝜀, color=\"red\")\n",
+    "    plt.axvline(mu - 𝜀, color=\"red\")\n",
     "    x_equiv = zγ2*d_amostral\n",
-    "    cdfs = norm.cdf([mu-d,mu+d], loc=mu, scale=d_amostral)\n",
+    "    cdfs = norm.cdf([mu-𝜀,mu+𝜀], loc=mu, scale=d_amostral)\n",
     "    area = cdfs[1]-cdfs[0]\n",
     "    plt.fill_between(x_amostral, y_X, where=((x_amostral >= (mu - x_equiv))&(x_amostral <= (mu + x_equiv)) ), color=\"wheat\")\n",
     "    plt.text(mu, 0.5*norm.pdf(mu), \"$\\gamma={:.2f}\\%$\".format(area*100), fontsize=12)\n",
@@ -648,16 +624,16 @@
     "\n",
     "Lembremos que estamos interessados numa distância em relação à média populacional $\\mu$, ou seja:\n",
     "\n",
-    "$d = \\overline{x} - \\mu$\n",
+    "$\\varepsilon = \\overline{x} - \\mu$\n",
     "\n",
     "Temos então:\n",
     "\n",
-    "$z_{\\gamma/2} = \\frac{d}{\\frac{\\sigma}{\\sqrt{n}}}$\n",
+    "$z_{\\gamma/2} = \\frac{\\varepsilon}{\\frac{\\sigma}{\\sqrt{n}}}$\n",
     "\n",
     "\n",
     "Isolando o $n$, encontramos:\n",
     "\n",
-    "$n = ( z_{\\gamma/2}\\frac{\\sigma}{d} )^2$\n",
+    "$n = ( z_{\\gamma/2}\\frac{\\sigma}{\\varepsilon} )^2$\n",
     "\n",
     "Utilizando a fórmula acima devemos obter o mesmo valor (ou próximo) encontrado na versão interativa."
    ]
@@ -668,7 +644,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = (z_gamma2 * σ / d)**2\n",
+    "n = (z_gamma2 * σ / 𝜀)**2\n",
     "print(\"n={}\".format(n))\n",
     "print(\"Mas n deve ser um número inteiro, então: n={}\".format(ceil(n)))"
    ]
@@ -699,6 +675,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
