--- a/aula21/Aula21_Exercicios_THparaMediaComVarianciaDesconhecida.ipynb
+++ b/aula21/Aula21_Exercicios_THparaMediaComVarianciaDesconhecida.ipynb
@@ -100,9 +100,17 @@
    "source": [
     "# ESCREVA SUA RESPOSTA AQUI"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
