Corrigindo erro no notebook da aula 22

--- a/aula22/Aula22_Atividade_RegressaoSimples.ipynb
+++ b/aula22/Aula22_Atividade_RegressaoSimples.ipynb
@@ -411,8 +411,8 @@
     "beta0 = results.params['const']\n",
     "beta1 = results.params['2010_income']\n",
     "\n",
-    "print(\"Estimativa de beta0 (coeficente linear): {0}\".format(b0))\n",
-    "print(\"Estimativa de beta1 (coeficente angular): {0}\".format(b1))"
+    "print(\"Estimativa de beta0 (coeficente linear): {0}\".format(beta0))\n",
+    "print(\"Estimativa de beta1 (coeficente angular): {0}\".format(beta1))"
    ]
   },
   {
